[gd_scene load_steps=7 format=2]

[ext_resource path="res://ativos/imagens/caixa01.png" type="Texture" id=1]
[ext_resource path="res://itens/script_caixa01.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34.0001, 33.0715 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 34.0001, 33.0715 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 33.6758, 0.965233 )

[sub_resource type="Animation" id=5]
length = 0.3
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.25, 0.275, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1.7 ), Vector2( 0, 3.4 ), Vector2( 0, 5.1 ), Vector2( 0, 5.1 ), Vector2( 0, 3.4 ), Vector2( 0, 1.7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.25, 0.275, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 2, 1.9 ), Vector2( 2, 1.8 ), Vector2( 2, 1.7 ), Vector2( 2, 1.7 ), Vector2( 2, 1.8 ), Vector2( 2, 1.9 ) ]
}

[node name="Caixa01" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 17
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.00025177, 0.928671 )
shape = SubResource( 1 )

[node name="CaixaAtaque1" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 16

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CaixaAtaque1"]
position = Vector2( 0.00025177, 0.928671 )
shape = SubResource( 6 )

[node name="CaixaAtaque2" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D4" type="CollisionShape2D" parent="CaixaAtaque2"]
modulate = Color( 0.0196078, 1, 0.12549, 1 )
position = Vector2( 0.0082283, -33.1086 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/pisada = SubResource( 5 )
[connection signal="area_entered" from="CaixaAtaque1" to="." method="personagem_pisou"]
[connection signal="body_entered" from="CaixaAtaque2" to="." method="personagem_pisou"]
